1.3vcli Xuixo

* ZigZag interpreter console providing the following system command
	 - desc   : Describe the requested component.
	 - help   : Prints the help. Type help [command] for deatiled help.
	 - load   : Load a ZigZag script into the interpreter.
	 - ls     : List information related to the ZigZag script built.
	 - reset  : Resets the current constructed flow.
	 - search : Searches for any component and flow that match the query.
	 - save   : Save the flow built so far.
	 - quit   : Quits the console (same as ctr+D).
	 - version: Prints the version information.
	
* Hooked the ZigZag console to the compiler

* Started the ZigZag interpreter console.
	- Uses JLine for terminal emulation

* Moved the ZigZag compiler and runner to used jar-based MAUs
 
* Refactoring of the core to avoid intertwined dependencies and static factories

1.2vcli Panellet:

* Modified the Mau code generator of the ZigZag compiler to produce parallel component creation
	- Supports AUTO parallelization
	- Supports unforced and forced order maintenance 

* Extension to the ZigZag grammar to allow parallelization of instances (ordered and unordered)

* Fix to the add remove location WS (remove the corruption of descriptions problem identified by Boris)

* Implemented the MAU executor

* Integrated the semantic parser and MAU format generator

* Implemented the ZigZag compiler and parser

* Develop the ZigZag language

* (!!) Cummulative updates to the core
	- Better cleaning of webuis threads (a while ago Duane mention some apps with webuis were not finishing and this is the reason).
    - Fix to /admin/abort.txt of a webui (was leaving behind mr propper and thus not letting the flow to be destroyed), and
    -Webui now effectively also serve /public/resources (which will make AJAX easier so you can get the client pages form the webui /public/resources itself)

* (!!) Bug fixing
	- Fixed possible lost of data